# food-insecurity-framework

./: .gitignore  README.md  foodinsecurityframework-0.0.1-py3-none-any.whl  pyproject.toml  requirements.txt  setup.cfg  setup.py
foodinsecurityframework/: moea.py
src/: moea.py  plots.py
src/foodinsecurityframework/: fetch_data.py  plots.py
