[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "foodinsecurityframework"
authors = [
    {name = "Rafael Schultz", email = "rafaeldschultz@gmail.com"},
]
description = "Framework to help multicriteria decision-making in multidisciplinary environments"
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "deap",
    "plotly",
    "matplotlib",
    "geopandas",
    "seaborn",
    "yellowbrick",
    "libpysal",
    "pysal"
]
dynamic = ["version"]