[metadata]
name = foodinsecurityframework
version = 0.0.1
author = Rafael Schultz
author_email = 
description = Framework to help multicriteria decision-making in multidisciplinary environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafaeldschultz/food-insecurity-framework
project_urls =
Bug Tracker =

classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: GNU General Public License v3 (GPLv3)
Operating System :: OS Independent

[options]
package_dir =
= src
packages = find:
python_requires = >=3.8
install_requires =
   numpy,
   pandas,
   deap,
   plotly,
   matplotlib,
   geopandas,
   seaborn, 
   yellowbrick,
   libpysal